Detect swapped method parameters